--- a/ex1.html
+++ b/ex1.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="ex1.js"></script>
   </head>
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
     </nav>
     <main>
-      <h1>My other page</h1>
+      <h1>Ex1</h1>
     </main>
   </body>
 </html>
