--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <a href="/page2.html">Ex1</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1>Act2 - Dojo de Kata's</h1>
     </main>
   </body>
 </html>
