--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
       Remove all code in `styles.css`!
     -->
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./Act2/Kata0/kata0.js"></script>
   </head>
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Ex1</a>
     </nav>
     <main>
       <h1>Act2 - Dojo de Kata's</h1>
