--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Remove all code in `styles.css`!
     -->
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./Act2/Kata0/kata0.js"></script>
+    <script type="module" src="./Act2/suma/suma.js"></script>
   </head>
   <body>
     <nav>
